# STL-Generator

./: README.md
Server/: .gitignore  README.md  docker-compose.yml
Server/chat-ai-fastapi/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
Server/chat-ai-fastapi/chat_ai_fastapi/: celery_config.py  database.py  main.py  models.py  schemas.py
Server/chat-ai-fastapi/chat_ai_fastapi/routes/: chat.py  messages.py
Server/chat-ai-fastapi/chat_ai_fastapi/utils/: helpers.py
Server/chat-ai-fastapi/tests/: test_messages.py
Server/chat-ai-worker/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Server/chat-ai-worker/chat_ai_worker/: celery_config.py  stl_backend.ipynb  tasks.py
frontend/: package-lock.json  package.json
frontend/src/_hooks/: useDebounce.tsx  useInfiniteScroll.tsx
frontend/src/_services/: chatService.tsx
frontend/src/_store/: chatStore.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Chat.tsx
frontend/src/components/chat/: ManagerSidebar.tsx  chat-input.tsx  chat-ui.tsx  message.tsx  prompt-dialogue.tsx  promptInput.tsx  side-Bar.tsx
frontend/src/components/loading-dots/: index.tsx  styles.css
frontend/src/components/messages/: message-codeblock.tsx  message-markdown-memoized.tsx  message-markdown.tsx
frontend/src/components/ui/: DatePicker copy.tsx  DatePicker.tsx  button.tsx  data-table-pagination.tsx  data-table.tsx  modal.tsx  switch.tsx
